fix: fix responsiveness on mobile, add tipoID to localStorage

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@
 body {
   overflow: hidden;
 }
+
+@media (max-width: 1080px) {
+  body {
+    overflow: scroll;
+  }
+}
