--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -76,7 +76,7 @@
 
   .total-project-container {
     border-radius: 0;
-    /* height: 100%; */
+    height: 100%!important;
   }
 
   .total-projects-carousel-container {
